<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_done"
        android:orderInCategory="1"


        android:title="DONE"
        app:showAsAction="always"></item>
</menu>

