...
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:text="2017-01-03"/>

                    <ImageButton
                        android:id="@+id/template_btn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:background="@null"
                        app:srcCompat="@drawable/ic_archive_white_36dp"/>

...
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right">

                    <ImageButton
                        android:id="@+id/to_template_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@null"
                        app:srcCompat="@drawable/ic_save_black_24dp"/>

...
