<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <item
        android:id="@+id/menu_load"
        android:title="Load into Diary"/>
    <item
        android:id="@+id/menu_edit"
        android:title="Edit"
        />
    <item
        android:id="@+id/menu_delete"
        android:title="Delete"
        />
</menu>